--- a/.gitignore
+++ b/.gitignore
@@ -88,3 +88,12 @@ fastlane/test_output
 # https://github.com/johnno1962/injectionforxcode
 
 iOSInjectionProject/
+
+
+*.png
+*.psd 
+*.ai 
+*.blend 
+*.usdc
+*.usdz
+*.JPG
